Update to NetLogo 6 and swipl 9