@@ -4,16 +4,17 @@ import main.NetPrologoExtension;
 
 import org.nlogo.api.Argument;
 import org.nlogo.api.Context;
-import org.nlogo.api.DefaultReporter;
+import org.nlogo.api.Reporter;
 import org.nlogo.api.ExtensionException;
 import org.nlogo.api.LogoException;
-import org.nlogo.api.Syntax;
+import org.nlogo.core.Syntax;
+import org.nlogo.core.SyntaxJ;
 
 //Run a new query and store its first N solutions.
-public class RunQueryNsolutions extends DefaultReporter {
+public class RunQueryNsolutions implements Reporter {
 
     public Syntax getSyntax() {
-        return Syntax.reporterSyntax(new int[] {Syntax.NumberType(),Syntax.StringType()}, Syntax.NumberType());
+        return SyntaxJ.reporterSyntax(new int[] {Syntax.NumberType(),Syntax.StringType()}, Syntax.NumberType());
     }
   
 	@Override
@@ -27,6 +28,6 @@ public class RunQueryNsolutions extends DefaultReporter {
         	throw new ExtensionException(e.getMessage());
         }
         
-    	return new Double(NetPrologoExtension.runQueryNsolutions(numSolutions, call)); 
+    	return Double.valueOf(NetPrologoExtension.runQueryNsolutions(numSolutions, call)); 
 	}
 }
